ingress  files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-ingress
  namespace: default
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: haproxy
  rules:
    - host: "your-domain.com"  # Add your domain here
      http:
        paths:
          - pathType: Prefix
            path: "/api/tutorials"
            backend:
              service:
                name: springboot-svc
                port:
                  number: 8080
