ingress  files/ingress11.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress 
  namespace: haproxy-controller
  labels:
    app: spring-boot-3-rest-api-example-master
spec:
  rules:
    - host: qc.kshema.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-boot-3-rest-api-example-master
                port:
                  number: 8080
